style issue - chat overflow 수정

--- a/src/component/template/template.scss
+++ b/src/component/template/template.scss
@@ -1,10 +1,11 @@
 .template-wrap {
   width: 100vw;
+  min-width: 500px;
   height: 100vh;
   display: flex;
   flex-flow: column nowrap;
   font-family: 'Noto Sans KR', sans-serif;
-  min-width: 800px;
+  overflow-x: hidden;
   overflow-y: auto;
 
   header {
@@ -53,16 +54,19 @@
     }
   }
 
-  body {
+  .body {
     flex: 1 1 auto;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
     color: #333;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 
   footer {
     flex: 0 0 auto;
+    box-shadow: 0px -8px 10px rgba(255, 255, 255, 0.7);
     .footer-wrap {
       display: flex;
       flex-flow: row nowrap;
