--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,8 @@
 body {
   margin: 0;
   padding: 0;
+  overflow-x: auto;
+  overflow-y: hidden;
   h1, h2, p {
     margin: 0;
   }
