--- a/src/pages/guest/guest.scss
+++ b/src/pages/guest/guest.scss
@@ -2,7 +2,6 @@
 
 .guest-wrap {
   width: 1200px;
-  height: 100%;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
@@ -13,8 +12,9 @@
     flex: 0 0 auto;
     display: flex;
     flex-flow: column nowrap;
+    margin-bottom: 10px;
     h2 {
-      margin-bottom: 10px;
+      margin-bottom: 8px;
       font-size: 28px;
       line-height: 22px;
       color: #111;
@@ -29,7 +29,7 @@
     display: flex;
     flex-flow: column nowrap;
     align-items: flex-end;
-    padding: 0;
+    margin: 0;
     list-style: none;
     .chat-box {
       flex: 0 0 auto;
@@ -39,7 +39,7 @@
       flex-flow: column nowrap;
       min-width: 250px;
       max-width: 500px;
-      margin-top: 13px;
+      margin-bottom: 13px;
       padding: 10px;
       border-radius: 8px 8px 0 8px;
       box-shadow: 2px 3px 4px rgba(200, 200, 200, 0.5);
